@@ -1,10 +1,11 @@
-package cn.edu.buaa.patpat.judge.services.impl;
+package cn.edu.buaa.patpat.judge.extensions.judge;
 
 import cn.edu.buaa.patpat.judge.config.Globals;
 import cn.edu.buaa.patpat.judge.dto.TestCaseResult;
 import cn.edu.buaa.patpat.judge.dto.TestResultEnum;
 import cn.edu.buaa.patpat.judge.models.CaseDescriptor;
 import cn.edu.buaa.patpat.judge.models.ProblemDescriptor;
+import cn.edu.buaa.patpat.judge.utils.Messages;
 import cn.edu.buaa.patpat.judge.utils.diff.AdvancedDiffProvider;
 import cn.edu.buaa.patpat.judge.utils.diff.BasicDiffProvider;
 import cn.edu.buaa.patpat.judge.utils.diff.IDiffProvider;
@@ -12,7 +13,6 @@ import cn.edu.buaa.patpat.judge.utils.process.IProcessDescriptor;
 import cn.edu.buaa.patpat.judge.utils.process.ProcessDescriptor;
 import lombok.AllArgsConstructor;
 
-import java.io.BufferedReader;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -23,15 +23,25 @@ import java.util.concurrent.TimeoutException;
 @AllArgsConstructor
 public class Avatar implements Callable<TestCaseResult> {
     /**
+     * The message will be prompted when the Security Manager is enabled.
+     * FIXME: I don't know how to disable this in Java 17.
+     */
+    private static final String POLICY_WARNING = """
+            WARNING: A command line option has enabled the Security Manager
+            WARNING: The Security Manager is deprecated and will be removed in a future release
+            """;
+
+    /**
      * The path of the test case data.
      */
     private final String problemPath;
-
     /**
-     * The path of the compiled class.
+     * The path to the project to be judged.
      */
-    private final String classPath;
-
+    private final String judgePath;
+    /**
+     * The path to the Java runtime.
+     */
     private final String binPath;
 
     private final ProblemDescriptor descriptor;
@@ -50,8 +60,12 @@ public class Avatar implements Callable<TestCaseResult> {
 
         try {
             exitValue = ProcessDescriptor.create()
-                    .exec(exe, "-classpath", ".", descriptor.getMainClass())
-                    .setWorkingDirectory(classPath)
+                    .exec(exe,
+                            "-Djava.security.manager",
+                            "-Djava.security.policy=" + Globals.POLICY_FILENAME,
+                            "-classpath", "out",
+                            descriptor.getMainClass())
+                    .setWorkingDirectory(judgePath)
                     .redirectInput(inputPath.toString())
                     .redirectOutput(output)
                     .redirectError(error)
@@ -60,10 +74,12 @@ public class Avatar implements Callable<TestCaseResult> {
             return TestCaseResult.of(TestResultEnum.JE, "Failed to run the test case " + testCase.getId());
         } catch (TimeoutException e) {
             return TestCaseResult.of(TestResultEnum.TLE, e.getMessage());
+        } catch (Exception e) {
+            return TestCaseResult.of(TestResultEnum.RE, Messages.truncate(e.getMessage(), POLICY_WARNING));
         }
 
         if (exitValue != 0) {
-            return TestCaseResult.of(TestResultEnum.RE, truncateMessage(error.getStdErr()));
+            return TestCaseResult.of(TestResultEnum.RE, Messages.truncate(error.getStdErr(), POLICY_WARNING));
         }
 
         List<String> expected;
@@ -84,27 +100,8 @@ public class Avatar implements Callable<TestCaseResult> {
         }
     }
 
-    private String truncateMessage(BufferedReader reader) {
-        StringBuilder sb = new StringBuilder();
-        try {
-            String line;
-            while ((line = reader.readLine()) != null) {
-                if (sb.length() + line.length() <= Globals.MAX_MESSAGE_LENGTH) {
-                    sb.append(line).append("\n");
-                } else {
-                    sb.append(line, 0, Globals.MAX_MESSAGE_LENGTH - sb.length());
-                    sb.append("...");
-                    break;
-                }
-            }
-        } catch (IOException e) {
-            return "Failed to read error message";
-        }
 
-        return sb.toString();
-    }
-
-    private IDiffProvider getDiffProvider(String mode) throws JudgeFailedException {
+    private IDiffProvider getDiffProvider(String mode) {
         if ("advanced".equalsIgnoreCase(mode)) {
             return new AdvancedDiffProvider();
         }
